# UCU_operating_systems

./: .myshell_history  README.md
exam/: CMakeLists.txt  README.md  start.sh
exam/db/: first
exam/inc/: master.h  options_parser.h  slave.h
exam/src/: inner_commands.cpp  inner_commands.h  main.cpp  master.cpp  options_parser.cpp  slave.cpp
lab0_fpga/: ALU.bsf  ALU.v  ALU_test.v  ALU_test.v.bak  README.md  blink.qpf  blink.qsf  top.bdf
lab10_RTOS/: .cproject  .mxproject  README.md  lab10_RTOS.ioc
lab10_RTOS/Inc/: main.h
lab10_RTOS/Src/: freertos.c  gpio.c  tim.c  usart.c
lab1_bash_script/: file1.h  file2.cpp  main_file.cpp
lab1_xv6/xv6_source/: Makefile  cat.c  cp.c  hello_world.c  mv.c  sh.c
lab2_mycat/: CMakeLists.txt  README.md
lab2_mycat/src/: main.cpp
lab2_mycat/src/file_interface/: file_interface.cpp
lab3_myshell/: CMakeLists.txt  README.md  compile.sh  test_script.msh
lab3_myshell/inc/: glob_posix.h  merrno.h  options_parser.h  shell.h
lab3_myshell/programs/mycat/: CMakeLists.txt
lab3_myshell/programs/mycp/: CMakeLists.txt
lab3_myshell/src/: glob_posix.cpp  options_parser.cpp  shell.cpp
lab4_myrls/: CMakeLists.txt  README.md  compile.sh
lab4_myrls/src/: main.cpp  options_parser.cpp
lab5_myshell_2/: .myshell_history  CMakeLists.txt  README.md
lab5_myshell_2/inc/: commands.hpp  line_operations.hpp  shell.h
lab5_myshell_2/programs/mycat/: CMakeLists.txt  compile.sh
lab5_myshell_2/programs/mycat/inc/file_interface/: file_interface.h
lab5_myshell_2/programs/mycat/src/: options_parser_mycat.cpp
lab5_myshell_2/programs/mycp/: CMakeLists.txt  README.md
lab5_myshell_2/programs/mycp/inc/file_interface/: file_interface_mycp.h
lab5_myshell_2/programs/mycp/src/: options_parser_mycp.cpp
lab5_myshell_2/src/: commands.cpp  line_operations.cpp  main.cpp  pipes.cpp  shell.cpp
lab6_myshell_3/: .gitignore  CMakeLists.txt  README.md  test_script.msh
lab6_myshell_3/inc/: glob_posix.h  globals.h  options_parser.h  pipes.hpp  server.h  shell.h
lab6_myshell_3/programs/mycat/: README.md
lab6_myshell_3/programs/mycat/src/: main.cpp
lab6_myshell_3/programs/mycat/src/file_interface/: file_interface.cpp
lab6_myshell_3/programs/mycp/: CMakeLists.txt
lab6_myshell_3/programs/mycp/inc/: options_parser_mycp.h
lab6_myshell_3/programs/mycp/src/: main.cpp
lab6_myshell_3/programs/mycp/src/file_interface/: file_interface_mycp.cpp
lab6_myshell_3/src/: commands.cpp  glob_posix.cpp  line_operations.cpp  main.cpp  options_parser.cpp  pipes.cpp  server.cpp  shell.cpp
lab9_RTOS/: .project  lab10_RTOS Run.cfg  lab10_RTOS.xml
lab9_RTOS/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
lab9_RTOS/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
